[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Plastic010_1K_Color.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Plastic010_1K_Roughness.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/robot.glb" type="PackedScene" id=4]
[ext_resource path="res://Enemy/Health.gd" type="Script" id=5]
[ext_resource path="res://Assets/healthbar_over.png" type="Texture" id=6]
[ext_resource path="res://Assets/healthbar_progress.png" type="Texture" id=7]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.505882, 0.505882, 0.505882, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.4
roughness = 0.35

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.290196, 0, 1, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.4
roughness = 0.35

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.4
roughness = 0.4

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.290196, 0, 1, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.4
roughness = 0.35
roughness_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0.788235, 1, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.4
roughness = 0.35
roughness_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.708025, 0.682557, 1.04821 )

[sub_resource type="SphereShape" id=4]
radius = 10.0

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]

[node name="robot" parent="Spatial" instance=ExtResource( 4 )]
transform = Transform( 0.6, 0, 0, 0, 0.5, 0, 0, 0, 0.6, 0, -0.255751, 0 )

[node name="Middle" parent="Spatial/robot" index="0"]
material/0 = SubResource( 5 )

[node name="Eyes" parent="Spatial/robot" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.103162, -2.01446 )

[node name="Feet" parent="Spatial/robot" index="2"]
material/0 = SubResource( 6 )

[node name="Nozzle" parent="Spatial/robot" index="3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.114721, 0.584705, -0.888526 )
material/0 = SubResource( 7 )

[node name="Halves" parent="Spatial/robot" index="5"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.0162579, 0 )
material/0 = SubResource( 8 )

[node name="Legs" parent="Spatial/robot" index="6"]
material/0 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.003, -0.441, 0 )
shape = SubResource( 10 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.584092, 0 )
enabled = true
cast_to = Vector3( 0, 0, -50 )

[node name="Sight" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Sight"]
shape = SubResource( 4 )

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="Shoot" type="Timer" parent="."]
wait_time = 0.5

[node name="Health" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
billboard = 1
transparent = false
script = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="Health"]
size = Vector2( 200, 40 )

[node name="Healthbar" type="TextureProgress" parent="Health/Viewport"]
margin_right = 200.0
margin_bottom = 40.0
max_value = 5.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.129412, 1, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]

[editable path="Spatial/robot"]
